<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <io.github.ivanryuu.tadaima.HomeNetworkPreference
        android:key="home_network"
        android:title="@string/pref_title_home_network"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@string/pref_default_phone_number"
        android:inputType="phone"
        android:key="phone_number"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_phone_number" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_text_message"
        android:inputType="textAutoComplete"
        android:key="text_message"
        android:maxLines="2"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_text_message" />


</PreferenceScreen>
